--- a/a.html
+++ b/a.html
@@ -1,163 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Game Scene</title>
-    <style>
-        body {
-            margin: 0;
-        }
-
-        canvas {
-            display: block;
-        }
-    </style>
-</head>
-
-<body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/PointerLockControls.js"></script>
-
-    <script>
-        let scene, camera, renderer, controls;
-        const objects = [];
-
-        class House {
-            constructor() {
-                this.group = new THREE.Group();
-                const geometry = new THREE.BoxGeometry(20, 20, 20);
-                const material = new THREE.MeshBasicMaterial({ color: 0x8B4513 });
-                const walls = new THREE.Mesh(geometry, material);
-                this.group.add(walls);
-
-                // Roof
-                const roofGeometry = new THREE.ConeGeometry(22, 10, 4);
-                const roofMaterial = new THREE.MeshBasicMaterial({ color: 0x8B0000 });
-                const roof = new THREE.Mesh(roofGeometry, roofMaterial);
-                roof.position.y = 15;
-                roof.rotation.y = Math.PI / 4;
-                this.group.add(roof);
-            }
-        }
-
-        class Chair {
-            constructor() {
-                this.group = new THREE.Group();
-                // Simple chair construction
-                const back = new THREE.BoxGeometry(1, 3, 1);
-                const seat = new THREE.BoxGeometry(1, 0.5, 1);
-                const leg = new THREE.BoxGeometry(0.25, 2, 0.25);
-
-                const material = new THREE.MeshBasicMaterial({ color: 0x654321 });
-                this.group.add(new THREE.Mesh(back, material));
-                const seatMesh = new THREE.Mesh(seat, material);
-                seatMesh.position.set(0, 1.25, 0.5);
-                this.group.add(seatMesh);
-
-                // Add legs
-                for (let pos of [[-0.4, -0.4], [0.4, -0.4], [-0.4, 0.4], [0.4, 0.4]]) {
-                    let legMesh = new THREE.Mesh(leg, material);
-                    legMesh.position.set(pos[0], -0.5, pos[1]);
-                    this.group.add(legMesh);
-                }
-            }
-        }
-
-        class Table {
-            constructor() {
-                this.group = new THREE.Group();
-                const top = new THREE.BoxGeometry(3, 0.5, 2);
-                const leg = new THREE.BoxGeometry(0.25, 2, 0.25);
-                const material = new THREE.MeshBasicMaterial({ color: 0x654321 });
-
-                this.group.add(new THREE.Mesh(top, material));
-                for (let pos of [[-1, -0.75], [1, -0.75], [-1, 0.75], [1, 0.75]]) {
-                    let legMesh = new THREE.Mesh(leg, material);
-                    legMesh.position.set(pos[0], -1.25, pos[1]);
-                    this.group.add(legMesh);
-                }
-            }
-        }
-
-        class RoofFan {
-            constructor() {
-                this.group = new THREE.Group();
-                const base = new THREE.CylinderGeometry(0.5, 0.5, 1, 32);
-                const blade = new THREE.BoxGeometry(0.1, 3, 0.1);
-                const material = new THREE.MeshBasicMaterial({ color: 0x808080 });
-
-                this.group.add(new THREE.Mesh(base, material));
-                this.blade = new THREE.Mesh(blade, material);
-                this.blade.position.y = 0.5;
-                this.group.add(this.blade);
-            }
-
-            update() {
-                this.group.rotation.y += 0.05; // Rotate fan
-            }
-        }
-
-        function init() {
-            scene = new THREE.Scene();
-            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-            renderer = new THREE.WebGLRenderer();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            document.body.appendChild(renderer.domElement);
-
-            // Add objects to scene
-            const house = new House();
-            const table = new Table();
-            const chair = new Chair();
-            const fan = new RoofFan();
-
-            house.group.position.set(0, 10, 0);
-            table.group.position.set(0, 10, 0);
-            chair.group.position.set(0, 10, 5);
-            fan.group.position.set(0, 25, 0);
-
-            scene.add(house.group, table.group, chair.group, fan.group);
-
-            // Controls
-            controls = new THREE.PointerLockControls(camera, document.body);
-            scene.add(controls.getObject());
-
-            // Simple movement
-            document.addEventListener('keydown', onKeyDown, false);
-            document.addEventListener('keyup', onKeyUp, false);
-
-            camera.position.set(0, 15, 35); // Position the camera
-        }
-
-        function onKeyDown(event) {
-            switch (event.key) {
-                case 'w': controls.moveForward = true; break;
-                case 's': controls.moveBackward = true; break;
-                case 'a': controls.moveLeft = true; break;
-                case 'd': controls.moveRight = true; break;
-            }
-        }
-
-        function onKeyUp(event) {
-            switch (event.key) {
-                case 'w': controls.moveForward = false; break;
-                case 's': controls.moveBackward = false; break;
-                case 'a': controls.moveLeft = false; break;
-                case 'd': controls.moveRight = false; break;
-            }
-        }
-
-        function animate() {
-            requestAnimationFrame(animate);
-            objects.forEach(obj => {
-                if (obj.update) obj.update();
-            });
-            renderer.render(scene, camera);
-        }
-
-        init();
-        animate();
-    </script>
-</body>
-
-</html>
+new
