--- a/projects.html
+++ b/projects.html
@@ -130,7 +130,7 @@
     <h1>Projects</h1>
 
     <div class="filter">
-        <label for="folderSelect">Select a folder:</label>
+        <label for="folderSelect">Select a week:</label>
         <select id="folderSelect" onchange="loadSelectedFolder()"></select>
     </div>
 
